Draw empty board to dom

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    open console
+    <h1>Tic Tac Toe</h1>
+    <div id="container"></div>
     <script src="script.js"></script>
 </body>
 
