--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <h1>Tic Tac Toe</h1>
-    <div id="container"></div>
+    <main>
+        <div id="container"></div>
+    </main>
     <script src="script.js"></script>
 </body>
 
