--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <h1>Tic Tac Toe</h1>
     <main>
+        <h1>Tic Tac Toe</h1>
         <div id="container"></div>
+        <div class="notice"></div>
     </main>
     <script src="script.js"></script>
 </body>
