Add reset button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <h1>Tic Tac Toe</h1>
+        <button id="reset">Reset</button>
         <div id="container"></div>
         <div class="notice"></div>
     </main>
