Add slider to change board size

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <main>
         <h1>Tic Tac Toe</h1>
         <button id="reset">Reset</button>
+        <div class="slider">
+            <label for="slider">Size: 3</label>
+            <input type="range" id="slider" min="3" max="9" value="3">
+        </div>
         <div id="container"></div>
         <div class="notice"></div>
     </main>
