--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Tic Tac Toe</h1>
         <button id="reset">Reset</button>
         <div class="slider">
-            <label for="slider">Size: 3</label>
+            <label for="slider" , id="sliderLabel">Size: 3</label>
             <input type="range" id="slider" min="3" max="9" value="3">
         </div>
         <div id="container"></div>
