--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
     <main>
         <h1>Tic Tac Toe</h1>
-        <button id="reset">Reset</button>
         <div class="slider">
             <label for="slider" , id="sliderLabel">Size: 3</label>
             <input type="range" id="slider" min="3" max="9" value="3">
         </div>
+        <div class="score">Score: 0 - 0</div>
+        <button id="reset">Reset</button>
         <div id="container"></div>
         <div class="notice"></div>
     </main>
