Implement custom mark

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
                 <label for="slider" , id="sliderLabel">Size: 3</label>
                 <input type="range" id="slider" min="3" max="9" value="3">
             </div>
+            <div class="markInputs">
+                <div>
+                    <label for="player1-input">Mark 1</label>
+                    <input type="text" id="player1-input" maxlength="1" value="X">
+                </div>
+                <div>
+                    <label for="player2-input">Mark 2</label>
+                    <input type="text" id="player2-input" maxlength="1" value="O">
+                </div>
+            </div>
             <div class="score">Score: 0 - 0</div>
             <button id="reset">Reset</button>
         </div>
